test_src/compiler_errors/types/arithmetic/SubtractBoolError2.b
class SubtractBoolError2 {
    void test() {
        println(2 - false);
    }
}
